--- a/manifest.json
+++ b/manifest.json
@@ -5,11 +5,7 @@
     "description": "This extension replace default new tab of your browsers (Google Chrome and Firefox) with a random photo capturing breathtaking moment at Vietnam",
     "version": "1.0",
     "chrome_url_overrides" : {
-	"newtab": "src/html/newtab.html"
+	"newtab": "www/index.html"
     },
-    "content_scripts": [{
-	"js": ["src/js/fb-sdk.js"],
-	"matches": ["http://*/*", "https://*/*"]	
-    }],
-    "content_security_policy": "script-src 'self' https://connect.facebook.net; object-src 'self'"    
+    "content_security_policy": "script-src 'self' 'unsafe-eval' https://connect.facebook.net; object-src 'self'"    
 }
